# python-iconv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.en  README.md  build.py  iconvcodec.py  iconvmodule.c  pyproject.toml  setup.py  test_iconv.py  test_iconvcodec.py
.github/workflows/: lint.yml  test.yml
