[tool.poetry]
name = "python-iconv"
version = "1.0.0"
description = "iconv-based Unicode converter"
authors = ["Bodo Graumann <mail@bodograumann.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/bodograumann/python-iconv"
repository = "https://github.com/bodograumann/python-iconv"
keywords = ["iconv", "python3", "unicode"]

build = "build.py"

[[tool.poetry.packages]]
include = "iconvcodec.py"
format = "sdist"

[[tool.poetry.packages]]
include = "iconvmodule.c"
format = "sdist"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
